Changelog
=========


2.0.2 (unreleased)
------------------

- Fix bug in custom allowedContentTypes when FTI has no "behaviors" (AT).
  [jone]


2.0.1 (2011-12-06)
------------------

- Fixed workflow definitions: add all configured permission also to the permissions managed by this workflow.
  [phgross]


2.0 (2011-11-17)
----------------

- Adjust the repository workflow: Repositoryfolders should be visible for users with the Member role.
  Issue #1269 Ordnungspositionen fuer alle Mitglieder eines Mandanten sichtbar machen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1269/
  [phgross]

- Updated repositoryfolder and repositoryroot workflows:
  Added new role "Role Manager" that has permissions to delegate roles via
  the sharing tab.
  #1245 Neue Rolle einführen um local roles anzupassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1245/
  [lgraf]

- Made Repositoryroot Journalizable and added journal tab to the tabbedview, enabled only for role managers.
  Issue #1242 Fuer local_roles Anpassungen Journaleintraege generieren
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1242/
  [phgross]


2.0a10 (2011-09-30)
-------------------

* Fixed saveReferenceNumberPrefix() event handler - not only store the prefix
  in the list of issued prefixes, but also assign it to the actual object.
  [lgraf]

* Issue #1176 alle translatinos mit from zope.i18n import translate
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1176
  [eschmutz]

* added 'Add portal content' permission to the Contributor role, for allowing add repositoryfolders on the root
  [phgross]

* Added grok.require to RepositoryRootOverview
  [eschmutz]

* Added test-buildout for plone 4.1
  [eschmutz]



2.0a9 (2011-08-24)
------------------

* Tests now work with plone.app.testing
  [ttschanz]


2.0a8
-----

* Issue #1052 Byline icons durch sprite icons ersetzen