@@ -5,6 +5,9 @@ Changelog
 2.0.2 (unreleased)
 ------------------
 
+- Add @@primary_repository_root view for getting the primary repository root.
+  [jone]
+
 - Fix bug in custom allowedContentTypes when FTI has no "behaviors" (AT).
   [jone]
 
@@ -209,4 +212,3 @@ Changelog
 
 * Issue #24: Registraturposition: hinzufuegbare Typen je nach Inhalt
   [21.09.2009, jbaumann]
-
